--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -3,9 +3,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    justify-content: center;
+    min-height: 100vh;
+    perspective: 1000px;
 }
 
 .game {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    transform-style: preserve-3d;
 }
