--- a/src/styles/playerO.css
+++ b/src/styles/playerO.css
@@ -3,4 +3,19 @@
     height: 32px;
     border: 2px solid white;
     border-radius: 50%;
+    animation: placedO 0.3s;
+}
+
+@keyframes placedO {
+    0% {
+        transform: translateZ(400px) rotateY(0);
+    }
+
+    50% {
+        transform: translateZ(200px) rotateY(90deg);
+    }
+
+    100% {
+        transform: translateZ(0) rotateY(360deg);
+    }
 }
